2011-01-04  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Dan Bernstein.

        Clicking on the first or the last letter of LTR/RTL text in a RTL/LTR block puts caret on the opposite side.
        https://bugs.webkit.org/show_bug.cgi?id=50992

        Fixed the bug by interchanging the offset when the direction of inline text box and the containing block
        does not match. Reused the code added by http://trac.webkit.org/changeset/73553.

        Test: editing/selection/caret-bidi-first-and-last-letters.html

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::offsetForPosition):
2011-01-04  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Dan Bernstein.

        Clicking on the first or the last letter of LTR/RTL text in a RTL/LTR block puts caret on the opposite side.
        https://bugs.webkit.org/show_bug.cgi?id=50992

        Added a test to ensure WebKit places the caret on the side user clicked even when text's natural direction
        and the containing block's direction do not match.

        * editing/selection/caret-bidi-first-and-last-letters-expected.txt: Added.
        * editing/selection/caret-bidi-first-and-last-letters.html: Added.
        * editing/selection/resources/caret-edge-shared.js: Avoid calling verify() outside of DRT.


Canonical link: https://commits.webkit.org/65310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74971 268f45cc-cd09-0410-ab3c-d52691b4dbfc