WebCore/rendering/InlineTextBox.cpp
@@ -1147,7 +1147,8 @@ int InlineTextBox::offsetForPosition(int lineOffset, bool includePartialGlyphs) 
 
     int leftOffset = isLeftToRightDirection() ? 0 : m_len;
     int rightOffset = isLeftToRightDirection() ? m_len : 0;
-    if (renderer()->containingBlock()->style()->isLeftToRightDirection() != isLeftToRightDirection())
+    bool blockIsInOppositeDirection = renderer()->containingBlock()->style()->isLeftToRightDirection() != isLeftToRightDirection();
+    if (blockIsInOppositeDirection)
         swap(leftOffset, rightOffset);
 
     if (lineOffset - logicalLeft() > logicalWidth())
@@ -1158,8 +1159,12 @@ int InlineTextBox::offsetForPosition(int lineOffset, bool includePartialGlyphs) 
     RenderText* text = toRenderText(renderer());
     RenderStyle* style = text->style(m_firstLine);
     const Font* f = &style->font();
-    return f->offsetForPosition(TextRun(textRenderer()->text()->characters() + m_start, m_len, textRenderer()->allowTabs(), textPos(), m_toAdd, !isLeftToRightDirection(), m_dirOverride || style->visuallyOrdered()),
+    int offset = f->offsetForPosition(TextRun(textRenderer()->text()->characters() + m_start, m_len,
+        textRenderer()->allowTabs(), textPos(), m_toAdd, !isLeftToRightDirection(), m_dirOverride || style->visuallyOrdered()),
         lineOffset - logicalLeft(), includePartialGlyphs);
+    if (blockIsInOppositeDirection && (!offset || offset == m_len))
+        return !offset ? m_len : 0;
+    return offset;
 }
 
 int InlineTextBox::positionForOffset(int offset) const
